Silly workaround for fdo#55156

I feel dirty now.

Change-Id: I1cafb0c0494d56bc9c81594c2145b2cc4a1ee389